--- a/css/style.css
+++ b/css/style.css
@@ -2,35 +2,61 @@ body{
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
-    background-color: white;
+    background-color: #030338;
+
 }
 #header{
     width: 90%;
     height: 80px;
+    padding-bottom: 20px;
     margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: static;
-    background-color: #030338;
+    background-color:  #030338;;
+    /* border: 1px solid white; */
+     /* #030338; */
 }
 #logoNdfavorite{
-   width: 20%;
+   width: 25%;
    height: 100%;
    display: flex;
-   background-color: hotpink;
+   flex-direction: row;
+   /* flex-wrap: wrap; */
+   justify-content: space-between;
+   align-items: center;
+   /* background-color: hotpink; */
 }
+
+.logo{
+   width: 140px;
+   height: 50px;
+   background-color: white;
+   /* border: 1px solid red;; */
+}
+
+
+.fav{
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 0.5px;
+    color: white;
+    font-size: 1rem;
+}
+
 #searchBarSection{
    width: 40%;
    height: 100%;
    display: flex;
    align-items: center;
-   justify-content: space-evenly;
+   /* border: 1px solid red;; */
+   justify-content: space-between;
    background-color: #030338;
 
 }
 #searchBar{
-  width: 50%;
+  width: 70%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -76,6 +102,7 @@ input:focus{
     position: absolute;
     left: 5px;
     z-index: 2;
+    /* color: white; */
     color:rgb(207, 204, 204)
 }
 /* #searchBar input:focus + .icon 
@@ -97,11 +124,14 @@ input:focus{
     position: relative;
 }
 .iconBell{
-    color: rgb(207,204, 204);
+    color: white;
+    /* color: rgb(207,204, 204); */
     font-size: 1.6rem;
+
     display: block;
     position: relative;
 }
+
 .dot{
     width: 8px;
     height: 8px;
@@ -109,16 +139,573 @@ input:focus{
     right: 0px;
     top: 2px;
     display: inline-block;
-    background-color: blue;
+    background-color: red;
     border-radius: 50%;
     z-index: 2;
 }
+
 .profile{
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     border-radius: 25px;
     background-color: white;
     z-index: 1;
     /* border: 1px solid red; */
 }
+
+/* Common Classes */
+
+
+ /* Media Querrry For HEADER SECTION */
+
+
+ /* Main Sction */
+ #main{
+     width: 85%;
+     /* height: 600px; */
+     margin: auto;
+     /* overflow: scroll; */
+     display: flex;
+     padding-bottom: 90px;
+     /* position: static; */
+     flex-wrap: nowrap;
+     /* flex-direction: column; */
+     /* border: 1px solid white; */
+ }
+ #main_content{
+     width: 70%;
+     height: auto;
+     display: flex;
+     flex-wrap: wrap;
+     flex-direction: column;
+     /* border: 1px solid red; */
+ }
+/* SLIDE IN+MAGE SECTION */
+#slidingImage{
+  height:280px;  
+  width: 95%;
+  margin-top: 2rem;
+  ;
+  position: relative;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  background-color: white;
+}
+/* ******************************* */
+
+.left{
+  height: 100%;
+  width: 70%;
+    transition: transform 0.3s;
+    /*border-radius: 10%;*/
+  background-color: yellow;
+  text-align: center;
+    cursor: pointer;
+
+}
+.top{
+  height: 120%;
+  width: 70%;
+  left: 15%;
+  cursor: pointer;
+  z-index: 3;
+  transition: transform 0.3s;
+  background-color: red;
+  position: absolute;
+}
+
+.right{
+  height: 100%;
+  width: 70%;
+    z-index: 2;
+  float: right;
+  transition: transform 0.3s;
+  cursor: pointer;
+  position: relative;
+  background-color: cyan;
+
+}
+.right:hover ~ .left{
+   z-index: 1;
+}
+.right:hover ~ .top{
+  /*background-color: green;*/
+  /*position: relative;*/
+  z-index: 2;
+  /*height: 110%;*/
+  -ms-transform: scale(0.9); /* IE 9 */
+  -webkit-transform: scale(0.9); /* Safari 3-8 */
+  transform: scale(0.9); 
+
+}
+
+.right:hover{
+  width: 55%;
+  position: absolute;
+  left: 45%;
+  /*height: 120%;*/
+  z-index: 3;
+  -ms-transform: scale(1.19); /* IE 9 */
+  -webkit-transform: scale(1.19); /* Safari 3-8 */
+  transform: scale(1.19); 
+
+}
+.left:hover ~ .top{
+  z-index: 2;
+  /*height: 110%;*/
+  -ms-transform: scale(.9); /* IE 9 */
+    -webkit-transform: scale(.9); /* Safari 3-8 */
+    transform: scale(0.9); 
+}
+.left:hover ~ .right{
+    z-index: 1;
+    left: 30%;
+  /*height: 80%;*/
+  
+}
+
+.left:hover{
+ /*height: 120%;*/
+ width: 55%;
+ position: absolute;
+ z-index: 3;
+ -ms-transform: scale(1.19); /* IE 9 */
+  -webkit-transform: scale(1.19); /* Safari 3-8 */
+  transform: scale(1.16);
+}
+
+/* ******************************* */
+
+
+/* LAtest Release Section */
+#latestRelease{
+    /* height: 300px; */
+    width: 100%;
+    display: flex;
+    /* border: 1px solid green; */
+    flex-direction: column;
+}
+
+.sectionHeading span{
+    color: white;
+    font-family: sans-serif;
+    font-weight: 700;
+    font-size: 1.3rem;
+    /* padding-top: 1rem;
+    padding-bottom: 1rem; */
+    display: block;
+}
+.latestReleaseContent{
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    min-width: 300px;
+    /* height: 100%; */
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-basis: 100%; */
+    flex-direction: row;
+    /* border: 1px solid white; */
+    
+}
+#latestReleaseLeft{
+    width: 50%;
+    min-width: 200px;
+    height: 100%;
+    flex-grow: 1;
+    /* flex-basis: 100%; */
+    display: flex;
+    /* padding: 1rem; */
+    flex-direction: column;
+    background-color: transparent;
+}
+.latestContentTop{
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  /* border: 1px solid yellow; */
+}
+.latestReleaseTopLeft{
+    width: 70%;
+    /* height: 100%; */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* border: 1px solid lime; */
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+    justify-content: start;
+    align-items: center;
+}
+
+.latestReleaseTopRight>span{
+   font-size: 0.8rem;
+   color: white;
+   letter-spacing: 1px;
+}
+/* .latestReleaseTopRight>span>i{
+    color: red;
+} */
+.thumnailLatestRelease{
+    width: 80px;
+    height: 80px;
+    display: flex;
+    /* padding-top: 10px;
+    padding-bottom: 10px; */
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: white;
+}
+.thumnailLatestRelease:hover > .playButton{
+    border-left-color: black;
+}
+.disLatestRelease{
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+}
+.latestReleaseTopRight{
+    width: 30%;
+    /* height: 200%; */
+    padding-bottom: 10px;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid yellow; */
+
+}
+
+
+/* #latestReleaseContentRight{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(241, 114, 241);
+} */
+
+
+/* Media Querry for Laatest Release Section */
+
+/* *********POPULAR ARTIST SECTION *************/
+#popular{
+    height: 230px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid red; */
+}
+.popularMainDiv{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    background-color: transparent;
+}
+.artistThumbnail{
+    height: 80%;
+    width: 15%;
+    border-radius: 50%;
+    background-color: white;
+}
+/* ***********MEDIA QUERRY FOR POPULAR ARTIST SECTION */
+/* 8651112236 */
+/* FOURTH SECTION */
+#fourth{
+    width: 100%;
+    /* height: 200px; */
+    margin-top: 1rem;
+    background-color: #0f0f6e;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+}
+.disc{
+    height: 100px;
+    width: 12%;
+    /* border-radius: 80%; */
+    background-color: white;
+}
+.fourth_circle{
+    height: 90px;
+    width: 11%;
+    border-radius: 80%;
+    background-color: white;
+}
+
+/* Fifth Section */
+#fifth{
+    /* height: 200px; */
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+}
+.fifth_flex{
+    height: 150px;
+    width: 32%;
+    background-color: white;
+
+}
+/* Latest English */
+#latestEnglish{
+    /* height: 200px; */
+    width: 100%;
+    display:  flex;
+    flex-direction: column;
+    background-color: transparent;
+}
+.latestEnglishDiv{
+    width: 100%;
+    height: 120px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent
+}
+.latestEnglishThumbnail{
+    width: 15%;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+}
+.latestEnglishPhoto{
+    width: 100%;
+    height: 70%;
+    background-color: white;
+}
+.latestEnglishTit{
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* border: 1px solid black; */
+}
+.latestEnglishDis{
+    
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* border: 1px solid black; */
+}
+.latestEnglishTit>span{
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+.latestEnglishDis>span{
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-weight: 400;
+    font-size: 0.7rem;
+}
+/* Queue Section */
+ #queue{
+     width: 30%;
+     height: 100%;
+     /* border: 1px solid yellow; */
+     display: flex;
+     align-items: center;
+     background-color: transparent;
+     /* overflow: scroll; */
+     flex-direction: column;
+ }
+ .queueBox{
+     width: 100%;
+     height: 4rem;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: center;
+     /* border: 1px solid grey; */
+ }
+ .Queue{
+    color: white;
+    font-weight: 700;
+    font-size: 1.3rem;
+ }
+ .queue_list_and_icon{
+     display: flex;
+     align-items: center;
+     /* border: 1px solid white; */
+ }
+ .queue_list{
+     /* font-family: sans-serif; */
+     color: rgb(156, 226, 231);
+     font-weight: 500;
+     font-size: 1rem;
+     /* padding: 1rem; */
+ }
+ .icon_down{
+     color: white;
+     padding: 1rem;
+     position: relative;
+     top: 6px;
+     font-size: 0.8rem;
+     color: rgb(156, 226, 231);
+ }
+ .drop_down_menu{
+     height: 40px;
+     width: 40px;
+     background-color: tomato;
+ }
  
+.queueBoxList{
+    /* height: 10px; */
+    padding: 0.5rem;
+    width: 90%;
+    /* margin: auto; */
+    display: flex;
+    flex-direction: row;
+    /* border: 1px solid yellowgreen; */
+}
+.start{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    /* border: 1px solid green; */
+}
+.serialNumber{
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
+}
+.serialNumber>span{
+  font-size: 1rem;
+  color: white;
+  font-weight: 600;
+}
+.thumnail{
+    width: 25%;
+    height: 80%;
+    position: relative;
+    left: 0.5rem;
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(76, 159, 228);
+}
+.thumnail:hover{
+    /* opacity: 0.5; */
+
+
+}
+
+.thumnail:hover > .playButton{
+    border-left-color: white;
+   
+}
+.thumnail_name{
+    height: 80%;
+    width: 60%;
+    /* border: 1px solid gold; */
+    position: relative;
+    left: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+
+  .end{
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+      align-items: center;
+  }
+  .iconHeart{
+      font-size: 1.1rem;
+      color: white;
+}
+
+
+/* Media Querry For Queue Section */
+
+
+/* Player Section */
+#player{
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    /* top: 100px; */
+    bottom: 0px;;
+    background-color: rgb(104, 104, 104);
+}
+.paler1{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+
+
+/************** COMMON CLASSES ********************/
+.sectionHeading{
+    width: 100%;
+    margin-top: 2rem;
+    padding-top: 1rem;
+    /* border: 1px solid red; */
+
+}
+
+.song_title{
+    color: white;
+    font-weight: 700;
+    font-size: 1rem;  
+    letter-spacing: .2px;
+    display: block;
+  }
+  .song_dis{
+      color: grey;
+      font-weight: 600;
+      font-size: .7rem;  
+      display: block;
+    }
+
+    .cursorpointer{
+        cursor: pointer;
+    }
+
+    .playButton{
+        width: 0;
+        height: 0;
+        /* display: none; */
+        border-top: 12px solid transparent;
+        border-left: 20px solid transparent;
+        border-bottom: 12px solid transparent;
+        transition: border-left-color .3s;
+        /* background-color: white; */
+        position: absolute;
+        /* left: 5px; */
+        
+        /* z-index: 2; */
+    }
+
+/****************COMMON CLASSES *******************/
