--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,37 @@ input:focus{
      flex-direction: column;
      /* border: 1px solid red; */
  }
+
+ /* MEDIA QUERRY FOR MAIN SECTION */
+ @media only screen and (max-width: 900px){
+    #main_content{
+        width: 90%;
+    }
+    #queue{
+        /* opacity: 0; */
+        /* position: absolute; */
+    }
+ }
+ /* @media only screen and (max-width: 900px){
+     #main_content{
+         width: 100%;
+         margin: auto;
+     }
+     #main{
+        width: 100%;
+        margin: auto;
+        overflow: hidden;
+    }
+    .popularMainDiv{
+        /* overflow-x: hidden; */
+        overflow-y: scroll;
+    }
+
+ }
+ @media only screen and (max-width: 600px){
+    
+} */
+
 /* SLIDE IN+MAGE SECTION */
 #slidingImage{
   height:280px;  
@@ -411,12 +442,15 @@ input:focus{
     background-color: transparent;
 }
 .artistThumbnail{
-    height: 80%;
-    width: 15%;
+    height: 120px;
+    width: 120px;
+    min-width: 120px;
+    min-height: 120px ;
     border-radius: 50%;
     background-color: white;
 }
 /* ***********MEDIA QUERRY FOR POPULAR ARTIST SECTION */
+
 /* 8651112236 */
 /* FOURTH SECTION */
 #fourth{
@@ -547,11 +581,21 @@ input:focus{
     font-weight: 700;
     font-size: 1.3rem;
  }
+ .queue_list_and_icon_option{
+     display: flex;
+     position: relative;
+     /* border: 1px solid green; */
+     flex-direction: column;
+ }
  .queue_list_and_icon{
      display: flex;
+     position: relative;
      align-items: center;
      /* border: 1px solid white; */
  }
+ /* .queue_list_and_icon:hover + .drop_down_menu{
+       background-color: red;
+ } */
  .queue_list{
      /* font-family: sans-serif; */
      color: rgb(156, 226, 231);
@@ -564,13 +608,67 @@ input:focus{
      padding: 1rem;
      position: relative;
      top: 6px;
+     /* z-index: 2; */
      font-size: 0.8rem;
      color: rgb(156, 226, 231);
  }
+ #hiddenBox{
+     right: 15%;
+     opacity: 0;
+     cursor: pointer;
+     position: absolute;
+ }
+
+ #hiddenBox:checked ~ .drop_down_menu{
+     display: flex;
+     /* opacity: 1;; */
+     /* background-color: blue; */
+
+ }
  .drop_down_menu{
-     height: 40px;
-     width: 40px;
-     background-color: tomato;
+     height: 120%;
+     width: 100%;
+     top: 90%;
+     right: 20%;
+     z-index: 999;
+     position: absolute;
+     display: flex;
+     display: none;
+     /* opacity: 0; */
+     flex-direction: column;
+     justify-content: center;
+     background-color: white;
+ }
+ .drop_down_menu:target{
+     display: flex;
+ }
+ .option1{
+
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: 0.5px solid rgb(77, 74, 74);
+
+ }
+ .option2{
+
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* border-bottom: 0.5px solid rgb(77, 74, 74); */
+
+ }
+ .optionSpan{
+     font-size: 0.8rem;
+     font-weight: 600;
+     position: relative;
+     left :3px;
+     font-family: sans-serif;
+
  }
  
 .queueBoxList{
@@ -709,3 +807,10 @@ input:focus{
     }
 
 /****************COMMON CLASSES *******************/
+
+/* ****************MEDIA QUERRY***************** */
+
+
+
+
+/* ****************MEDIA QUERRY***************** */
