--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
     /* overflow: hidden; */
-    background-color: #030338;
+    position: relative;
+    background-color: #1A1B38;
 
 }
 #header{
@@ -15,7 +16,7 @@ body{
     flex-direction: row;
     justify-content: space-between;
     position: static;
-    background-color:  #030338;;
+    background-color:  #1A1B38;
     /* border: 1px solid white; */
      /* #030338; */
 }
@@ -31,7 +32,7 @@ body{
 }
 
 .logo{
-   width: 140px;
+   width: 50px;
    height: 50px;
    background-color: white;
    /* border: 1px solid red;; */
@@ -54,7 +55,7 @@ body{
    position: relative;
    /* border: 1px solid red;; */
    justify-content: space-between;
-   background-color: #030338;
+   background-color: #1A1B38;
 
 }
 #searchBar{
@@ -81,7 +82,7 @@ body{
     border-radius: 8px;
     color: rgb(202, 202, 202);
     letter-spacing: 0.3px;
-    background-color: #0f0f6e;
+    background-color: #1B1D51;
 
 }
 
@@ -149,14 +150,17 @@ input:focus{
     border-radius: 50%;
     z-index: 2;
 }
-
+.radius{
+    border-radius: 50%;
+}
 .profile{
     height: 50px;
     width: 50px;
     border-radius: 25px;
-    background-color: white;
+    /* background-color: white; */
     z-index: 1;
-    border: 1px solid red;
+    /* border: 1px solid white; */
+    /* border: 1px solid red; */
 }
 #bellCheckBox{
     position: absolute;
@@ -211,7 +215,7 @@ input:focus{
  
 /* SLIDE IN+MAGE SECTION */
 #slidingImage{
-  height:280px;  
+  height:230px;  
   width: 95%;
   /* justify-content: center; */
   /* align-items: center; */
@@ -233,6 +237,7 @@ input:focus{
   background-color: yellow;
   text-align: center;
     cursor: pointer;
+    box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);
 
 }
 .top{
@@ -240,10 +245,12 @@ input:focus{
   width: 70%;
   left: 15%;
   cursor: pointer;
+  border: 2px solid white;
   z-index: 3;
   transition: transform 0.3s;
   background-color: red;
   position: absolute;
+  box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);
 }
 
 .right{
@@ -254,7 +261,9 @@ input:focus{
   transition: transform 0.3s;
   cursor: pointer;
   position: relative;
-  background-color: cyan;
+  /* box */
+  /* background-color: cyan; */
+  box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);
 
 }
 .right:hover ~ .left{
@@ -277,6 +286,7 @@ input:focus{
   left: 45%;
   /*height: 120%;*/
   z-index: 3;
+  border: 2px solid white;
   -ms-transform: scale(1.19); /* IE 9 */
   -webkit-transform: scale(1.19); /* Safari 3-8 */
   transform: scale(1.19); 
@@ -301,6 +311,7 @@ input:focus{
  width: 55%;
  position: absolute;
  z-index: 3;
+ border: 2px solid white;
  -ms-transform: scale(1.19); /* IE 9 */
   -webkit-transform: scale(1.19); /* Safari 3-8 */
   transform: scale(1.16);
@@ -444,8 +455,8 @@ input:focus{
     background-color: transparent;
 }
 .artistThumbnail{
-    height: 120px;
-    width: 15%;
+    height: 130px;
+    width: 14%;
     /* min-width: 120px; */
      /* min-width: 120px; */
     /* min-height: 120px ;  */
@@ -457,10 +468,10 @@ input:focus{
 /* 8651112236 */
 /* FOURTH SECTION */
 #fourth{
-    width: 100%;
+    width: 99%;
     /* height: 200px; */
     margin-top: 1rem;
-    background-color: #0f0f6e;
+    background-color: #1B1D51;
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
@@ -476,7 +487,8 @@ input:focus{
 /* }  */
 .fourth_circle{
     height: 90px;
-    width: 11%;
+    width: 10%;
+    margin-right: 3px;
     /* border-radius: 80%; */
     background-color: white;
 }
@@ -484,7 +496,7 @@ input:focus{
 /* Fifth Section */
 #fifth{
     /* height: 200px; */
-    width: 100%;
+    width: 99%;
     padding-top: 20px;
     padding-bottom: 20px;
     display: flex;
@@ -752,7 +764,24 @@ input:focus{
       color: white;
 }
 
+/* Special CSS */
 
+.fixed{
+    position: fixed; ;
+    visibility: hidden;
+    height: 60%;
+    width: 20px;
+    /* background-color: tomato; */
+    display: flex;
+    display: flex;
+    top: 20%;
+    right: 0;
+    /* background-color: tomato; */
+}
+.sadaf{
+    position: absolute;
+    visibility: hidden;
+}
 /* Media Querry For Queue Section */
 
 
@@ -787,7 +816,7 @@ input:focus{
     width: 30%;
     height: 80%;
     /* margin-bottom: 10px; */
-    background-color: brown;
+    /* background-color: brown; */
 
 }
 .player-song{
@@ -953,14 +982,49 @@ input:focus{
 /************** COMMON CLASSES ********************/
 .curve{
     border-radius: 10px;
+    border: 2px solid #ddd;
+    padding: 3px;
+}
+.rectangle{
+    border: 2px solid #ddd;
+    padding: 3px;
+}
+.rectangle:hover{
+    box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);
 }
 .common-img-class{
+    
     width: 100%;
     height: 100%;
     
 }
+
+.curve:hover{
+    box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);
+    
+}
+
 .img-round{
+    cursor: pointer;
     border-radius: 55%;
+    border: 3px solid #ddd;
+    /* padding: 3px; */
+
+}
+.img-round:hover{
+    box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);
+    /* opacity: 0.7; */
+}
+
+.img-thin-border{
+    /* border-radius: 5px; */
+    border: 2px solid #ddd;
+    cursor: pointer;
+    /* padding: 3px; */
+
+}
+.img-thin-border:hover{
+    /* box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815); */
 }
 .sectionHeading{
     width: 100%;
@@ -971,7 +1035,7 @@ input:focus{
 }
 
 .song_title{
-    color: rgb(143, 3, 3);
+    color: white;
     font-weight: 700;
     font-size: 1rem;  
     letter-spacing: .2px;
@@ -1122,7 +1186,140 @@ input:focus{
         position: absolute;
         visibility: hidden;
     }
+   .fixed{
+       /* background-color: tomato; */
+       visibility: visible;
+       overflow-y: auto;
+       z-index: 99;
+       overflow-x: hidden;
+       transition: width 0.4s;
+        /* display: flex; */
+        /* flex-direction: row; */
+
+   }
+   .fixed:hover{
+       width: 80%;
+
+   }
+
+   #accord-01{
+    width: 100%;
+    /* border: 1px solid red; */
+    /* position: relative; */
+    /* left: 10px; */
+    border: 2px solid white;
+    display: flex;
+    flex-direction: column;
    
+}
+
+.listOfSong-01{
+    width: 100%;
+    height: 40px;
+    background-color: #1B1D51;
+    /* border: 1px solid white; */
+    /* margin-top: 2px; */
+    /* background-color: ; */
+    /* border: 1px solid gray; */
+    display: flex;
+    border: 1px solid white;
+    cursor: pointer;
+    /*  */
+    /* box-shadow:   5px 10px #888888;; */
+    transition: transform 0.2s;
+
+}
+.listOfSong:hover{
+    box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);;
+
+}
+.listOfSong:hover{
+    transform: scale(1.1);
+}
+.firstHalf{
+    width: 75%;
+    display: flex;
+    /* border: 1px solid salmon; */
+    align-items: center;
+    /* justify-content: space-between; */
+
+}
+.serialNo-01{
+    width: 10px;
+    display: flex;
+    /* position: relative;
+    left: 10px; */
+    margin-left: 5px;
+    justify-content: center;
+    align-items: center;
+}
+.serialNo-01 span{
+    margin-left: 3px;
+    font-size: 1rem;
+    color: white;
+}
+.thumnailSecond-01{
+    height: 80%;
+    width: 40px;
+    margin-left: 5px;
+    /* position: relative; */
+    /* left: 0.5rem; */
+    background-color: salmon;
+}
+.secondHalf{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    
+}
+
+    /* For Second Page */
+ 
+    .btn-second{
+        width: 25%;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-size: 0.3rem;
+        font-weight: 400;
+        border: none;
+        color: white;
+        background-color: #030338;
+    }
+
+}
+
+@media only screen and (max-width: 560px){
+
+    #main{
+        width: 95%;
+        overflow-x: hidden;
+    }
+     #logoNdfavorite{
+        
+     }
+     .logo{
+        min-width: 30px;
+        height: 30px;
+     }
+     #searchBarSection{
+         width: 40%;
+     }
+ 
+     .iconBell{
+         font-size: 1.1rem;
+     }
+     .dot{
+         width: 5px;
+         height: 5px;
+     }
+     .profile{
+         height: 30px;
+         width: 30px;
+     }
 }
 @media only screen and (max-width: 320px){
       
@@ -1151,7 +1348,9 @@ input:focus{
     .profile{
         height: 30px;
         width: 30px;
+        
     }
+    
     #slidingImage{
         height: 200px;
         width: 90%;
@@ -1183,6 +1382,8 @@ input:focus{
         min-width: 150px;
         margin: 1px;
      }
+
+    
 }
 
 
@@ -1191,6 +1392,7 @@ input:focus{
 
 
 /* Second Page CSS */
+
 #secondQueue{
     width: 30%;
     height: 100%;
@@ -1224,24 +1426,31 @@ input:focus{
     /* overflow: scroll; */
     flex-direction: column;
 }
+
 .main_content_2{
-    /* border: 1px solid red; */
-    /* width: 60%; */
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
 }
 .banner{
     width: 90%;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
+    box-shadow: 0 0 5px 3px white;
+    /* rgba(0, 170, 226, 0.815);; */
     display: flex;
     flex-direction: row;
     /* margin: auto; */
     /* justify-content: center; */
     /* align-items: center; */
+
     height: 300px;
 }
 .firstBanner{
     width: 40%;
-    background-color: salmon;
+    /* background-color: salmon; */
     height: 100%;
 }
 
@@ -1250,7 +1459,7 @@ input:focus{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0f0f6e;
+    background-color: #1B1D51;
     height: 100%;
 }
 .innerSecondBanner{
@@ -1259,7 +1468,7 @@ input:focus{
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
-    background-color: #0f0f6e;
+    background-color: #1B1D51;
 }
 .bannerHeader{
     width: 100%;
@@ -1298,6 +1507,7 @@ input:focus{
 }
 .bannerButton{
     display: flex;
+    flex-wrap: nowrap;
     flex-direction: column;
 }
 .btn-second{
@@ -1310,6 +1520,8 @@ input:focus{
     font-weight: 400;
     border: none;
     color: white;
+    border: 1px solid white;
+    cursor: pointer;
     background-color: #030338;
 }
 .button-span{
@@ -1336,12 +1548,25 @@ input:focus{
 .listOfSong{
     width: 100%;
     height: 80px;
-    background-color: #0f0f6e;
+    background-color: #1B1D51;
+    border: 1px solid white;
     margin-top: 7px;
     /* background-color: ; */
     /* border: 1px solid gray; */
     display: flex;
+    
+    cursor: pointer;
+    /*  */
+    /* box-shadow:   5px 10px #888888;; */
+    transition: transform 0.2s;
 
+}
+.listOfSong:hover{
+    box-shadow: 0 0 5px 3px rgba(0, 170, 226, 0.815);;
+
+}
+.listOfSong:hover{
+    transform: scale(1.1);
 }
 .firstHalf{
     width: 75%;
@@ -1361,6 +1586,7 @@ input:focus{
     align-items: center;
 }
 .serialNo span{
+    margin-left: 3px;
     font-size: 1.2rem;
     color: white;
 }
